increment version to 0.1.1

--- a/history.rdoc
+++ b/history.rdoc
@@ -1,3 +1,7 @@
+== 0.1.1 (12 October 2014)
+
+* Fix travis auto deployment
+
 == 0.1.0 (12 October 2014)
 
 * Simple Synchronous SNMP get requests for SNMP v2c
