--- a/history.rdoc
+++ b/history.rdoc
@@ -1,3 +1,7 @@
+== 0.1.3 (13 October 2014)
+
+* Tweak the wording of the timeouts to show that its an error
+
 == 0.1.2 (13 October 2014)
 
 * Refactor the wiring
