--- a/history.rdoc
+++ b/history.rdoc
@@ -1,3 +1,8 @@
+== v0.2.1 (27 October 2014)
+
+* Try to fix the tag
+* Update the readme
+
 == v0.2.0 (27 October 2014)
 
 * Add SNMP Walk functionality
